--- a/MultiWindow/app/src/main/AndroidManifest.xml
+++ b/MultiWindow/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.iasa.sboh1214.multiwindow">
+          package="com.sboh1214.multiwindow">
 
     <application
             android:allowBackup="true"
